# ExamMine

./: .env.pub  .gitignore  Human_metrics.csv  OpenAI_Quick_Start.ipynb  README.md  README3.md  database.ipynb  embeddings_size.py  faiss_index.index  llm_metrics.csv  main.py  metadata.json  package-lock.json  package.json  pyproject.toml  readme2.md  store_pdf_database.py  store_pdf_mongo.py  updated_main.py
web_scraper/: input_websites.csv  web_scraper.py
