[tool.poetry]
name = "web_scraper"
version = "0.1.0"
description = "A project for web scraping past AP exams and generating study guides."
authors = ["anshsg13 <anshulsg13@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
reportlab = "^3.6.13"  # Replace this version with the latest available version if necessary
openai = "^0.28.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
selenium = "^4.11.0"
pandas = "^2.2.2"  
python-dotenv = "^1.0.1"
numpy = "^2.2.4"
faiss-cpu = "^1.10.0"
pypdf2 = "^3.0.1"
sentence-transformers = "^4.0.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pycryptodome = "^3.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
web-scraper = "web_scraper_multithreaded:main"
analyzer = "analyze_scraped_content:main"

